<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day3_Exercise_04_Maps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="latitude_">Latitude:</string>
    <string name="longitude_">Longitude:</string>
    <string name="show">Show</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>

</resources>
